fix modal scrolling when portion of modal is offscreen

--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -1,6 +1,10 @@
 // Global Modal styles
 .modal-pattern {
   height: auto;
+  &.modal-showing {
+    max-height: 100%;
+    overflow-y: auto;
+  }
   .modal-container {
     padding: 0;
   }
